--- a/src/VBart.EventsDemo.Inventory.Data/VBart.EventsDemo.Inventory.Data.csproj
+++ b/src/VBart.EventsDemo.Inventory.Data/VBart.EventsDemo.Inventory.Data.csproj
@@ -9,5 +9,6 @@
         <PackageReference Include="Autofac" Version="6.1.0" />
         <PackageReference Include="Dapper" Version="2.0.78" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
+        <PackageReference Include="Npgsql" Version="5.0.4" />
     </ItemGroup>
 </Project>
