--- a/tye.yaml
+++ b/tye.yaml
@@ -10,8 +10,6 @@ services:
 
   - name: monolithicdb
     image: mcr.microsoft.com/mssql/server:latest
-    tags:
-      - monolithic_db
     bindings:
       - name: Default
         port: 1433
@@ -24,8 +22,6 @@ services:
 
   - name: kafka-zookeeper
     image: confluentinc/cp-zookeeper:6.1.0
-    tags:
-      - kafka
     bindings:
       - name: zookeeper
         port: 2181
@@ -40,8 +36,6 @@ services:
 
   - name: kafka-broker-1
     image: confluentinc/cp-kafka:6.1.0
-    tags:
-      - kafka
     bindings:
       - name: PlainTextListener
         port: 29092
@@ -65,8 +59,6 @@ services:
 
   - name: kafka-broker-2
     image: confluentinc/cp-kafka:6.1.0
-    tags:
-      - kafka
     bindings:
       - name: PlainTextListener
         port: 29094
@@ -90,8 +82,6 @@ services:
 
   - name: confluent-control-center
     image: confluentinc/cp-enterprise-control-center:5.5.0
-    tags:
-      - kafka
     bindings:
       - protocol: http
         port: 9021
@@ -107,8 +97,6 @@ services:
 
   - name: kafka-connect
     image: debezium/connect:1.4
-    tags:
-      - kafka
     bindings:
       - port: 8083
         containerPort: 8083
@@ -128,8 +116,6 @@ services:
 
   - name: kafka-connect-ui
     image: landoop/kafka-connect-ui
-    tags:
-      - kafka
     bindings:
       - port: 8001
         containerPort: 8001
@@ -137,6 +123,32 @@ services:
     env:
       - CONNECT_URL="http://kafka-connect:8083/"
       - PROXY="true"
+
+  - name: aggregatordb
+    image: postgres:10.2
+    tags:
+      - postgres
+    env:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=YourStrongPassw0rd
+    bindings:
+      - name: Default
+        port: 5432
+      - name: Connection
+        connectionString: Server=${host};Port=${port};Database=postgres;User Id=postgres;Password=YourStrongPassw0rd;Enlist=true;
+
+  - name: flyway
+    dockerFile: Docker/PostgresMigrations.Dockerfile
+    dockerFileContext: .
+    tags:
+      - postgres
+    env:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=YourStrongPassw0rd
+      - POSTGRES_HOST=aggregatordb
+      - POSTGRES_PORT=5432
 
   - name: configurator
     dockerFile: Docker/Configurator.Dockerfile
