--- a/tye.yaml
+++ b/tye.yaml
@@ -29,8 +29,6 @@ services:
 
   - name: kafka-zookeeper
     image: confluentinc/cp-zookeeper:6.1.0
-    tags:
-      - kafka
     bindings:
       - name: zookeeper
         port: 2181
@@ -45,8 +43,6 @@ services:
 
   - name: kafka-broker-1
     image: confluentinc/cp-kafka:6.1.0
-    tags:
-      - kafka
     bindings:
       - name: PlainTextListener
         port: 29092
@@ -70,8 +66,6 @@ services:
 
   - name: kafka-broker-2
     image: confluentinc/cp-kafka:6.1.0
-    tags:
-      - kafka
     bindings:
       - name: PlainTextListener
         port: 29094
@@ -95,8 +89,6 @@ services:
 
   - name: confluent-control-center
     image: confluentinc/cp-enterprise-control-center:5.5.0
-    tags:
-      - kafka
     bindings:
       - protocol: http
         port: 9021
@@ -113,8 +105,6 @@ services:
 
   - name: kafka-connect
     image: debezium/connect:1.4
-    tags:
-      - kafka
     bindings:
       - port: 8083
         containerPort: 8083
@@ -131,6 +121,32 @@ services:
       - LOG4J_ROOT_LOGLEVEL=INFO
       - LOG4J_LOGGERS="org.reflections=ERROR"
       - GROUP_ID="kafka-connect"
+
+  - name: aggregatordb
+    image: postgres:10.2
+    tags:
+      - postgres
+    env:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=YourStrongPassw0rd
+    bindings:
+      - name: Default
+        port: 5432
+      - name: Connection
+        connectionString: Server=${host};Port=${port};Database=postgres;User Id=postgres;Password=YourStrongPassw0rd;Enlist=true;
+
+  - name: flyway
+    dockerFile: Docker/PostgresMigrations.Dockerfile
+    dockerFileContext: .
+    tags:
+      - postgres
+    env:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=YourStrongPassw0rd
+      - POSTGRES_HOST=aggregatordb
+      - POSTGRES_PORT=5432
 
   - name: configurator
     dockerFile: Docker/Configurator.Dockerfile
