--- a/tye.yaml
+++ b/tye.yaml
@@ -13,6 +13,16 @@ services:
     args: "--vehicles 15 --wait 1"
     replicas: 2
 
+  - name: InventoryAggregator
+    project: src\VBart.EventsDemo.Inventory.Aggregator\VBart.EventsDemo.Inventory.Aggregator.csproj
+    env:
+      - VEHICLE__KAFKA_CONSUMER_OPTIONS__ConsumerGroupId="aggregator"
+      - VEHICLE__KAFKA_CONSUMER_OPTIONS__Topics="dbServer.dbo.Vehicles"
+      - VEHICLE__KAFKA_CONSUMER_OPTIONS__BootstrapServers="kafka-broker-2:29094,kafka-broker-1:29092"
+      - ENGINE__KAFKA_CONSUMER_OPTIONS__ConsumerGroupId="aggregator"
+      - ENGINE__KAFKA_CONSUMER_OPTIONS__Topics="dbServer.dbo.Engines"
+      - ENGINE__KAFKA_CONSUMER_OPTIONS__BootstrapServers="kafka-broker-2:29094,kafka-broker-1:29092"
+
   - name: monolithicdb
     image: mcr.microsoft.com/mssql/server:2019-CU10-ubuntu-20.04
     tags:
@@ -102,6 +112,7 @@ services:
       - CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS=1
       - CONFLUENT_METRICS_TOPIC_REPLICATION=1
       - PORT=9021
+      - CONTROL_CENTER_CONNECT_CLUSTER="http://kafka-connect:8083/"
 
   - name: kafka-connect
     image: debezium/connect:1.4
@@ -131,9 +142,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=YourStrongPassw0rd
     bindings:
-      - name: Default
-        port: 5432
       - name: Connection
+        port: 5432
         connectionString: Server=${host};Port=${port};Database=postgres;User Id=postgres;Password=YourStrongPassw0rd;Enlist=true;
 
   - name: flyway
